src/theme/common.scss
/* ... */
.floating-toggles, .floating-ribbons {
  position: absolute;
  pointer-events: none;
  * {
    pointer-events: all;
  }

  &.big * {
    margin: 16px;
    font-size: 300%;
  }
}

.editor {
  display: flex;
  flex-direction: row-reverse;
  position: relative;

  &.add-button {
    padding: 0 !important;
    border: none !important;
    background-color: transparent !important;
    backdrop-filter: none !important;
    box-shadow: none !important;
  }

  &.stacked {
    display: block;
  }

  .editor-container {
    display: contents;
  }

  .text-wrapper {
    position: relative;
  }

  .floating-ribbons {
    right: 0;
    top: 32px;
  }

  .toolbar {
    display: none;
    flex-direction: row-reverse;
    & > :first-child {
      margin-right: 0;
    }
    & > * {
      flex-shrink: 0;
      height: 28px;
      min-width: 32px !important;
      margin: 4px 4px 8px;
    }
    & > button {
      min-width: 28px;
    }
    label {
      border: 1px dashed var(--border) !important;
    }
    label.on {
      border: 0.5px solid var(--border) !important;
    }
    .toolbar-toggle {
      position: relative;
      background-color: var(--toggle);
      border-radius: 6px;
      height: 28px;
      white-space: nowrap;
      &::before {
        content: ' ';
        position: absolute;
        width: 26px;
        height: 26px;
        top: 0;
        left: -1px;
        transition: left 300ms ease-in-out;
        border: 1px dashed var(--border);
        border-radius: 6px;
        pointer-events: none;
      }
      button {
        border: none;
        background: transparent;
        user-select: none;
        cursor: pointer;
        margin: 0;
        padding: 5px 0;
      }
    }
  }
  .toolbar-toggle-1 {
    &::before {
      left: 28px !important;
    }
  }
  .toolbar-toggle-2 {
    &::before {
      left: 56px !important;
    }
  }
  .toolbar-toggle-3 {
    &::before {
      left: 84px !important;
    }
  }
  .toolbar-toggle-4 {
    &::before {
      left: 112px !important;
    }
  }
  .toolbar-toggle-5 {
    &::before {
      left: 140px !important;
    }
  }

  &:focus-within, &.editing {
    .toolbar {
      display: flex;
    }
  }
}

.editor-label, .add-plugins-label {
  display: flex;
  flex-direction: column;
  margin-top: 12px;
}

.floating-ribbons {
  user-select: none;
  font-size: 80%;
  font-weight: bold;
  position: absolute;
  right: 0;
  top: 32px;
  & > div {
    position: relative;
    white-space: nowrap;
    cursor: pointer;
    right: -100%;
    margin: 4px !important;
    span {
      margin-right: auto;
      display: inline-block;
      max-width: 128px;
      text-overflow: ellipsis;
      overflow: hidden;
      border-radius: 2px;
      padding: 2px;
      border: 1px dashed var(--border);
    }
    &.on {
      right: 16px;
      text-align: right;
      span {
        backdrop-filter: blur(1.5px);
        border: 0.5px solid var(--border);
      }
    }
  }
}

.editor:focus-within, .bubble, .plugins-form > *, blockquote, .full-page .todo-list {
  border-radius: 8px;
  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.1);
}

.bubble, .plugins-form > *, blockquote {
  margin-top: 8px;
  padding: 8px;
  border: 1px dashed transparent;

  hr {
    border: none;
    border-top: 0.5px dotted var(--border);
    position: relative;
    left: -8px;
    width: calc(100% + 16px);
  }

  &:first-child {
    margin: 0;
  }
}

.bubble, .plugins-form > * {
  &:hover {
    border: 1px dashed var(--border);
  }
}

.bubble {
  .toolbar {
    display: flex;
  }
}

.toolbar .editor-toggle {
  user-select: none;
  font-size: 80%;
  font-weight: bold;
  position: relative;
  label {
    position: relative;
    top: -3px;
    transform: rotate(-3deg);
    white-space: nowrap;
    cursor: pointer;
    text-align: center;
    display: inline-block;
    max-width: 64px;
    text-overflow: ellipsis;
    overflow: hidden;
    border-radius: 2px;
    padding: 2px;
    border: 1px solid transparent;
    transition: all 0.1s cubic-bezier(.47,1.64,.8,1.2);
    transition-delay: 0.1s;
    &.on {
      top: 16px;
      transform: rotate(0);
    }
    &:not(.on):hover {
      transform: rotate(-4deg) scale(1.05);
    }
  }
}

.editor-help-popup {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  & > * {
    padding: 16px;
    max-width: 300px;
    border-radius: 2px;
    margin: 8px;
    background-color: var(--card);
    border: 1px solid transparent;
    &:hover {
      border: 1px solid var(--border);
    }
  }
}

video.qr-preview {
  width: 100vw;
  height: 100vh;
  object-fit: cover;
  overflow: hidden;
}

.popup {
  padding: 8px;
  background-color: var(--card) !important;
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
              0 8px 10px 1px rgba(0, 0, 0, 0.14),
              0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.context-menu {
  user-select: none;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  background-color: var(--card);
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
              0 8px 10px 1px rgba(0, 0, 0, 0.14),
              0 3px 14px 2px rgba(0, 0, 0, 0.12);
  & > * {
    display: block;
    border-radius: 2px;
    margin: 4px;
    padding: 4px;
    cursor: pointer;
    &:hover {
      background-color: var(--bg-hover);
    }
  }
}

.parent-link {
  max-width: 75em;
  display: block;
  font-size: 80%;
  font-weight: bold;
  color: var(--info);
  text-align: center;
  padding: 16px;
  margin: 8px;
}
/* ... */

